--- a/frontend/Central Park Data/CSS/style.css
+++ b/frontend/Central Park Data/CSS/style.css
@@ -2,7 +2,7 @@ body{
   font: 15px/1.5 Helvetica,sans-serif;
   padding:0;
   margin:0;
-  background:url('../images/CentralParkImage.png') no-repeat center center fixed;
+  background:url('https://stmed.net/sites/default/files/central-park-wallpapers-28494-631105.jpg') no-repeat center center fixed;
   background-size:cover;
   background-attachment: fixed;
     
